# rustjammers

./: .gitignore  Cargo.toml  README.md
Unity/: .gitignore
Unity/Assets/Fonts/: Alien-Encounters-Regular-Font.asset  Alien-Encounters-Regular-Rust.asset  Alien-Encounters-Solid-Regular-Font.asset  Alien-Encounters-Solid-Regular-Outline.asset  Alien-Encounters-Solid-Regular-Outlined.asset  DigitalSeven-Font.asset  FixedSysExcelsior-Font.asset
Unity/Assets/Material/: Concrete.mat  Glass.mat  New Material.mat  Player1.mat  Player2.mat  SeamlessSand.mat  fillet.mat  frizzbee.mat  goal1.mat  goal2.mat  sol.mat  top.mat
Unity/Assets/Models/: BeachChairOrange.blend  PalmTree.blend  PipesCurve.blend  PipesStraight.blend  SegmentsDisplay.blend
Unity/Assets/Models/Materials/: Bamboo.mat  Display.mat  FabricBlue.mat  FabricOrange.mat  Leaf.mat  Pipe.mat  PipeJoint.mat  PipeJoint_001.mat  Pipe_001.mat  Trunk.mat
Unity/Assets/Prefab/: Terrain.prefab  frizbee.prefab  player.prefab  terrain.prefab
Unity/Assets/Scenes/: Main.unity  Menu.unity
Unity/Assets/Scenes/Main/: LightingData.asset
Unity/Assets/Scenes/Menu/: LightingData.asset
Unity/Assets/Scripts/: StartGame.cs  StartGameButton.cs
Unity/Assets/Scripts/Menu/: StartGameButton.cs  backtomenue.cs
Unity/Assets/prefab/: frizbee.prefab  player.prefab
Unity/ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset
src/: agent.rs  collision.rs  frisbee.rs  game_engine.rs  game_state.rs  generate_qvalues.rs  lib.rs  player.rs  shared_data.rs  vector2.rs
(+18 files in other folders)
