[package]
name = "rustjammers"
version = "0.1.0"
authors = [
    "Axel Cocat",
    "Yohann Jerrain",
    "Esteban Dumas"
]

[lib]
name = "rustjammers_engine"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "generate_qvalues"
path = "src/generate_qvalues.rs"

[dependencies]
rand = "0.5.5"
bitflags = "1.0.4"
bincode = { version = "1.0.1", features = [ "i128" ] }
